# Z0Z_tools

./: .gitignore  CITATION.cff  README.md  context7.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: bandit.yml  create-release.yml  githubRelease.yml  pypiRelease.yml  pypiReleaseCython.yml  python-publish.yml  pythonTests.yml  release.yml  unittests.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/testing/: warnings.md
Z0Z_tools/: Z0Z_AudioHelpers.py  Z0Z_dataStructure.py  Z0Z_io.py  Z0Z_ioAudio.py  __init__.py  amplitude.py  autoRevert.py  clippingArrays.py  coping.py  dataStructures.py  filesystemToolkit.py  functionsNeedAHome.py  ioAudio.py  optionalPyTorch.py  optionalPyTorchAlternative.py  parseParameters.py  pipAnything.py  pytestForYourUse.py  pytest_parseParameters.py  scipyDOTsignalDOT_short_time_fft.py  theTypes.py  windowingFunctions.py
Z0Z_tools/Z0Z_tools/: Z0Z_io.pyi  __init__.pyi  clippingArrays.pyi  dataStructures.pyi  ioAudio.pyi  optionalPyTorch.pyi  optionalPyTorchAlternative.pyi  parseParameters.pyi  pipAnything.pyi  pytestForYourUse.pyi  windowingFunctions.pyi
Z0Z_tools/astTransformations/: __init__.py  _synchronizeDocstrings.py  _theSSOT.py  chopShop.py  exportStub.py  refine_humpy.py  synchronizeFiles.py
astTransformations/: __init__.py  _theSSOT.py  chopShop.py  refine_humpy.py  synchronizeFiles.py  windowingFunctions.py
citations/: CITATION.cff
humpy_cytoolz/: __init__.pxd  _signatures.pyi  _theTypes.py  dicttoolz.c  dicttoolz.cp314-win_amd64.pyd  dicttoolz.pxd  dicttoolz.pyi  dicttoolz.pyx  functoolz.c  functoolz.cp314-win_amd64.pyd  functoolz.pyi  functoolz.pyx  itertoolz.c  itertoolz.cp314-win_amd64.pyd  itertoolz.pyi  itertoolz.pyx  recipes.c  recipes.cp314-win_amd64.pyd  recipes.pyi  recipes.pyx  utils.c  utils.cp314-win_amd64.pyd  utils.pyx
humpy_cytoolz/curried/: exceptions.pyi  operator.py
humpy_cytoolz/tests/: test_curried_toolzlike.py  test_dicttoolz.py  test_itertoolz.py
humpy_tlz/: __init__.py  _build_tlz.py
humpy_toolz/: __init__.py  _signatures.py  _theTypes.py  dicttoolz.py  functoolz.py  functoolz.pyi  itertoolz.py  recipes.py  recipes.pyi  utils.py
humpy_toolz/curried/: __init__.py  __init__.pyi  exceptions.py  exceptions.pyi  operator.py  operator.pyi  toolz.py
humpy_toolz/sandbox/: __init__.py  core.py  core.pyi  parallel.py  parallel.pyi
humpy_toolz/sandbox/tests/: test_core.py  test_parallel.py
humpy_toolz/tests/: test_curried.py  test_curried_doctests.py  test_dicttoolz.py  test_functoolz.py  test_inspect_args.py  test_itertoolz.py  test_package.py  test_recipes.py  test_serialization.py  test_signatures.py  test_tlz.py  test_utils.py
tests/: conftest.py  test_Z0Z_io.py  test_amplitude.py  test_autoRevert.py  test_clippingArrays.py  test_dataStructures.py  test_filesystemToolbox.py  test_ioAudio.py  test_labeledAudioData.py  test_optionalPyTorchAlternative.py  test_padding_logic.py  test_parseParameters.py  test_pipAnything.py  test_spectrogram.py  test_stft.py  test_waveform.py  test_windowingFunctions.py
tests/coverage/: .coverage  coverage.lcov  coverage.xml
typings/: soundfile.pyi
typings/resampy/: __init__.pyi  core.pyi  filters.pyi  interpn.pyi
unittests/: test_Z0Z_dataStructure.py  test_ioAudio.py  test_pipAnything.py
