[project]
name = "Z0Z_tools"
version = "2.2.1"
description = "Typing, documenting, and improving toolz and cytoolz."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = [
  "Python",
  "cytoolz",
  "filesystem",
  "functional programming",
  "tools",
  "toolz"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Filesystems",
  "Topic :: Text Processing",
  "Topic :: Utilities",
  "Typing :: Typed",
]
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/Z0Z_tools", Issues = "https://github.com/hunterhogan/Z0Z_tools/issues", Repository = "https://github.com/hunterhogan/Z0Z_tools.git" }
dependencies = ["typing_extensions>=4.10.0"]
optional-dependencies = { development = [
  "astToolkit",
  "hunterMakesPy",
  "optype",
  "pytest-cov"
], testing = ["cython", "pytest"] }

[build-system]
requires = ["cython>=3.0", "setuptools>=74.1.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686", "pp*"]
test-requires = ["pytest"]
test-command = "pytest --pyargs humpy_cytoolz.tests humpy_toolz.tests humpy_toolz.sandbox.tests"

[tool.coverage]
report = { exclude_lines = ["if TYPE_CHECKING:", "if __name__ == \"__main__\":"], ignore_errors = false }
run = { branch = true, data_file = "tests/coverage/.coverage", omit = [
  "**/tests/*"
], source = ["."] }

[tool.pytest]
addopts = ["--color=yes"]
log_auto_indent = "On"
testpaths = ["**/tests"]

[tool.setuptools]
ext-modules = [
  { name = "humpy_cytoolz.dicttoolz", sources = ["humpy_cytoolz/dicttoolz.pyx"] },
  { name = "humpy_cytoolz.functoolz", sources = ["humpy_cytoolz/functoolz.pyx"] },
  { name = "humpy_cytoolz.itertoolz", sources = ["humpy_cytoolz/itertoolz.pyx"] },
  { name = "humpy_cytoolz.recipes", sources = ["humpy_cytoolz/recipes.pyx"] },
  { name = "humpy_cytoolz.utils", sources = ["humpy_cytoolz/utils.pyx"] },
]
package-data = { "*" = [
  "*.c",
  "*.pxd",
  "*.pyi",
  "*.pyx",
  "py.typed",
  "Notice_of_Copyright.txt",
] }
packages = [
  "humpy_cytoolz.curried",
  "humpy_cytoolz.tests",
  "humpy_cytoolz",
  "humpy_tlz",
  "humpy_toolz",
  "humpy_toolz.curried",
  "humpy_toolz.sandbox.tests",
  "humpy_toolz.sandbox",
  "humpy_toolz.tests",
  "Z0Z_tools",
]

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"
