[project]
name = "Z0Z_tools"
version = "3.1.1"
description = "Typing, documenting, and improving toolz and cytoolz."
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-NC-4.0"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = ["cytoolz", "functional programming", "toolz"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["optype", "typing_extensions>=4.10.0"]
optional-dependencies = { development = [
  "astToolkit",
  "hunterMakesPy",
  "pytest-cov",
  "cython>=3.0",
  "setuptools>=74.1.0"
], testing = ["pytest"] }

[project.urls]
Context7 = "https://context7.com/hunterhogan/z0z-tools"
Donate = "https://www.patreon.com/integrated"
Download = "https://pypi.org/project/Z0Z_tools"
Homepage = "https://github.com/hunterhogan/Z0Z_tools"
Issues = "https://github.com/hunterhogan/Z0Z_tools/issues"
Repository = "https://github.com/hunterhogan/Z0Z_tools.git"

[build-system]
requires = ["cython>=3.0", "setuptools>=74.1.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686", "pp*"]
test-requires = ["pytest"]
test-command = "pytest --pyargs humpy_cytoolz.tests humpy_toolz.tests humpy_toolz.sandbox.tests"

[tool.coverage]
report = { exclude_lines = ["if TYPE_CHECKING:", "if __name__ == \"__main__\":"], ignore_errors = false }
run = { branch = true, data_file = "tests/coverage/.coverage", omit = [
  "**/tests/*"
], source = ["."] }

[tool.pytest]
addopts = ["--color=yes"]
log_auto_indent = "On"
testpaths = ["**/tests"]

[tool.setuptools]
ext-modules = [
  { name = "humpy_cytoolz.dicttoolz", sources = ["humpy_cytoolz/dicttoolz.pyx"] },
  { name = "humpy_cytoolz.functoolz", sources = ["humpy_cytoolz/functoolz.pyx"] },
  { name = "humpy_cytoolz.itertoolz", sources = ["humpy_cytoolz/itertoolz.pyx"] },
  { name = "humpy_cytoolz.recipes", sources = ["humpy_cytoolz/recipes.pyx"] },
  { name = "humpy_cytoolz.utils", sources = ["humpy_cytoolz/utils.pyx"] },
]
package-data = { "*" = [
  "*.c",
  "*.pxd",
  "*.pyi",
  "*.pyx",
  "py.typed",
] }
packages = [
  "humpy_cytoolz.curried",
  "humpy_cytoolz.tests",
  "humpy_cytoolz",
  "humpy_tlz",
  "humpy_toolz",
  "humpy_toolz.curried",
  "humpy_toolz.sandbox.tests",
  "humpy_toolz.sandbox",
  "humpy_toolz.tests",
  "Z0Z_tools",
]

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"
