[metadata]
name = Z0Z_tools
version = 0.4.10
description = Reusable tools for various projects
author = Hunter Hogan
url = https://github.com/hunterhogan/Z0Z_tools

[options]
packages = find:
include_package_data = True
python_requires = >=3.10

install_requires = 
    librosa
    numpy
    packaging
    soundfile
    # Google Colab
    samplerate@git+https://github.com/tuxu/python-samplerate.git@fix_cmake_dep ; sys_platform == "linux" and platform_machine == "x86_64" and python_version <= "3.10"
    samplerate

[options.packages.find]
where = .
