[metadata]
name = Z0Z_tools
version = 0.5.0
description = Reusable tools for various projects
author = Hunter Hogan
url = https://github.com/hunterhogan/Z0Z_tools

[options]
packages = find:
include_package_data = True
python_requires = >=3.10

install_requires = 
    numpy
    packaging
    # Google Colab
    samplerate@git+https://github.com/tuxu/python-samplerate.git@fix_cmake_dep ; sys_platform == "linux" and platform_machine == "x86_64" and python_version <= "3.10"
    samplerate
    soundfile

[options.packages.find]
where = .
